# pyTorchAutoForge

./: .gitignore  .gitmodules  .readthedocs.yaml  AGENTS.md  README.md  TODO  TODO_TESTS.md  __test_init__.py  _version.py  check_torch_availability.sh  conda_install.sh  create_env.sh  environment-ci.yml  environment.yml  install_all.sh  install_submodule.sh  install_with_venv.sh  pyTorchAutoForge.code-workspace  pyproject.toml  release_to_pypi.sh  requirements.txt  requirements_backup.txt  requirements_old.txt  run_tests.sh  setup.py  start_mlflow_server.sh  start_mlflow_ui.sh  test_env.py
.github/workflows/: build_test_wheel.yml
container/: Dockerfile.python
doc/: .gitignore  Makefile  conf.py  example_doc.py  index.rst  install_sphinx.sh  makedoc.sh  requirements.txt
doc/_static/: ptaf_doc_theme.css
doc/sources/: modules.rst  pyTorchAutoForge.api.matlab.rst  pyTorchAutoForge.api.mlflow.rst  pyTorchAutoForge.api.onnx.rst  pyTorchAutoForge.api.rst  pyTorchAutoForge.api.tcp.rst  pyTorchAutoForge.api.telegram.wip  pyTorchAutoForge.api.tensorrt.rst  pyTorchAutoForge.api.torch.rst  pyTorchAutoForge.datasets.rst  pyTorchAutoForge.evaluation.rst  pyTorchAutoForge.hparams_optim.rst  pyTorchAutoForge.model_building.rst  pyTorchAutoForge.optimization.rst  pyTorchAutoForge.rst  pyTorchAutoForge.setup.rst  pyTorchAutoForge.utils.rst
docs/: conf.py  index.rst
docs/_static/: custom.css
examples/: .gitignore  ClassificationCIFAR100_Example.py  ClassificationCIFAR10_Example.py  ClassificationCIFAR10_HparamOptim_Example copy.py  ClassificationCIFAR10_HparamOptim_Example.py  example_ClassificationCIFAR10.py  example_ClassificationCIFAR10_HparamOptim.py  example_ModelProfiler.py  example_ModelProfiler.py.todo  example_RegressionSupervised.py  torchProfiler_Example.py
pyTorchAutoForge/: __init__.py  pyTorchAutoForge.py
pyTorchAutoForge/api/: __init__.py
pyTorchAutoForge/datasets/: .experimental.py  AugmentationsBaseClasses.py  AugmentationsManager.py  DataAugmentation.py  DataloaderIndex.py  DatasetClasses.py  ImagesAugmentation.py  LabelsClasses.py  __init__.py  auxiliary_functions.py
pyTorchAutoForge/evaluation/: ModelEvaluator.py  ModelExplainer.py  ModelProfiler.py  ResultsPlotter.py  __init__.py
pyTorchAutoForge/hparamsOptim/: AnalyzeOptunaStudy.py  ModelHparamsOptimizer.py  __init__.py  optuna_auxiliary.py
pyTorchAutoForge/hparams_optim/: optuna_auxiliary.py
pyTorchAutoForge/libManagement/: __init__.py
pyTorchAutoForge/modelBuilding/: ModelAssembler.py  ModelAutoBuilder.py  ModelClasses.py  ModelMutatorBNtoGN.py  __init__.py  modelBuildingFunctions.py  modelClasses.py
pyTorchAutoForge/model_building/: ModelAutoBuilder.py  ModelMutator.py  TODO  __init__.py  convolutionalBlocks.py  fullyConnectedBlocks.py  modelBuildingBlocks.py  modelClasses.py  poolingBlocks.py
pyTorchAutoForge/optimization/: ModelEvaluator.py  ModelTrainingManager.py  __init__.py  config.yaml  lossFcns.py  lossFunctionsClasses.py  sessionConfig.yaml
tests/: conftest.py  testConvBlockUtils.py  testFcnName.py  testImport.py  testMLflowWithOptuna.py  testModelAutoBuilder.py  testModelSpecification.py  testModelTrainingManager.py  testModelTrainingManagerConfig.py  testONNx.py  testPolarNdirectionDistance.py  testTorchModel.py
(+208 files in other folders)
